Merge branch 'story/NNO-12753' into 'master'