@@ -4,10 +4,14 @@ import net.n2oapp.criteria.dataset.DataSet;
 import net.n2oapp.framework.api.metadata.meta.action.LinkAction;
 import net.n2oapp.framework.api.metadata.meta.control.InputSelect;
 import net.n2oapp.framework.api.metadata.meta.control.StandardField;
+import net.n2oapp.framework.api.metadata.meta.control.ValidationTypeEnum;
 import net.n2oapp.framework.api.metadata.meta.page.SimplePage;
+import net.n2oapp.framework.api.metadata.meta.widget.table.DndColumn;
 import net.n2oapp.framework.api.metadata.meta.widget.table.RowClick;
+import net.n2oapp.framework.api.metadata.meta.widget.table.SimpleColumn;
 import net.n2oapp.framework.api.metadata.meta.widget.table.Table;
 import net.n2oapp.framework.api.metadata.meta.widget.table.TableWidgetComponent;
+import net.n2oapp.framework.api.metadata.meta.widget.toolbar.PerformButton;
 import net.n2oapp.framework.api.metadata.pipeline.ReadCompileBindTerminalPipeline;
 import net.n2oapp.framework.config.N2oApplicationBuilder;
 import net.n2oapp.framework.config.metadata.compile.context.PageContext;
@@ -29,6 +33,7 @@ class TableBinderTest extends SourceCompileTestBase {
     @Override
     protected void configure(N2oApplicationBuilder builder) {
         super.configure(builder);
+        builder.getEnvironment().getContextProcessor().set("ctxParam", "testValue");
         builder.packs(
                 new N2oAllDataPack(),
                 new N2oPagesPack(),
@@ -64,7 +69,53 @@ class TableBinderTest extends SourceCompileTestBase {
         PageContext context = new PageContext("testTableFiltersBinder", "/:id/");
         Table component = (Table) ((SimplePage) pipeline.get(context, new DataSet().add("id", "1"))).getWidget();
         InputSelect select = (InputSelect) ((StandardField) component.getFilter().getFilterFieldsets()
-                .get(0).getRows().get(0).getCols().get(0).getFields().get(0)).getControl();
+                .getFirst().getRows().getFirst().getCols().getFirst().getFields().getFirst()).getControl();
         assertThat(select.getDataProvider().getQueryMapping().get("name").getValue(), is("1"));
+    }
+
+    /**
+     * Проверка резолва контекстных переменных в условиях кнопки тулбара (PerformButtonBinder)
+     */
+    @Test
+    void performButtonConditionResolve() {
+        ReadCompileBindTerminalPipeline pipeline = bind(
+                "net/n2oapp/framework/config/metadata/compile/page/testTableConditionBinder.page.xml",
+                "net/n2oapp/framework/config/metadata/compile/query/testEmptyBody.query.xml");
+        SimplePage page = (SimplePage) pipeline.get(new PageContext("testTableConditionBinder"), new DataSet());
+        Table<?> table = (Table<?>) page.getWidget();
+        PerformButton button = (PerformButton) table.getToolbar().get("topLeft").getFirst().getButtons().getFirst();
+        assertThat(button.getConditions().get(ValidationTypeEnum.VISIBLE).getFirst().getExpression(),
+                is("status == 'testValue'"));
+    }
+
+    /**
+     * Проверка резолва контекстных переменных в условиях видимости колонки (AbstractColumnBinder)
+     */
+    @Test
+    void columnConditionResolve() {
+        ReadCompileBindTerminalPipeline pipeline = bind(
+                "net/n2oapp/framework/config/metadata/compile/page/testTableConditionBinder.page.xml",
+                "net/n2oapp/framework/config/metadata/compile/query/testEmptyBody.query.xml");
+        SimplePage page = (SimplePage) pipeline.get(new PageContext("testTableConditionBinder"), new DataSet());
+        TableWidgetComponent component = ((Table<?>) page.getWidget()).getComponent();
+        SimpleColumn column = (SimpleColumn) component.getHeader().getCells().getFirst();
+        assertThat(column.getConditions().get(ValidationTypeEnum.VISIBLE).getFirst().getExpression(),
+                is("status == 'testValue'"));
+    }
+
+    /**
+     * Проверка резолва контекстных переменных в условиях видимости дочерних колонок dnd-column (DndColumnBinder)
+     */
+    @Test
+    void dndColumnChildrenConditionResolve() {
+        ReadCompileBindTerminalPipeline pipeline = bind(
+                "net/n2oapp/framework/config/metadata/compile/page/testTableConditionBinder.page.xml",
+                "net/n2oapp/framework/config/metadata/compile/query/testEmptyBody.query.xml");
+        SimplePage page = (SimplePage) pipeline.get(new PageContext("testTableConditionBinder"), new DataSet());
+        TableWidgetComponent component = ((Table<?>) page.getWidget()).getComponent();
+        DndColumn dndColumn = (DndColumn) component.getHeader().getCells().get(1);
+        SimpleColumn childColumn = dndColumn.getChildren().getFirst();
+        assertThat(childColumn.getConditions().get(ValidationTypeEnum.VISIBLE).getFirst().getExpression(),
+                is("status == 'testValue'"));
     }
 }
